[package]
name = "rupost"
version = "0.1.0"
edition = "2024"
about = "A API test tool based on documents"

[lib]
name = "rupost"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.19.0", features = ["v4"] }

